--- a/User Service/src/main/resources/application.yml
+++ b/User Service/src/main/resources/application.yml
@@ -15,4 +15,8 @@ spring:
     username: postgres
     password: pgAdmin
     driverClassName: org.postgresql.Driver  
-   
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true  
