Communicate Rating and user service using rest template

--- a/Rating-Service/src/main/resources/application.yml
+++ b/Rating-Service/src/main/resources/application.yml
@@ -15,4 +15,7 @@ spring:
     username: postgres
     password: pgAdmin
     driverClassName: org.postgresql.Driver  
-   
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true   
